# UnnamedTestTask

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
docs/: TaskDescription.md
src/digest/: __init__.py  alembic.ini  entrypoint.py  schemas.py
src/digest/adapters/: __init__.py  database.py  rabbit.py  storage.py
src/digest/db/: __init__.py  entrypoint.py  models.py
src/digest/db/alembic/: env.py
src/digest/db/alembic/versions/: 59a2847680c9_initial.py  707f513cdf16_rename_popularity_to_rating.py
src/digest/services/: __init__.py  digester.py  filters.py
tests/: .env  conftest.py  docker-compose.yaml  test_database.py  test_digester.py  test_filters.py  test_redis.py
