[tool.poetry]
name = "contentdigesttesttask"
version = "0.1.0"
description = ""
authors = ["nekone <nekonekun@gmail.com>"]
readme = "README.md"
packages = [{include = "digest", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pika = "^1.3.2"
sqlalchemy = "^2.0.19"
pydantic = "^2.0.3"
psycopg2-binary = "^2.9.6"
redis = {extras = ["hiredis"], version = "^4.6.0"}
alembic = "^1.11.1"
pydantic-settings = "^2.0.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.278"
blue = "^0.9.1"


[tool.poetry.group.tests.dependencies]
pytest = "^7.4.0"
coverage = "^7.2.7"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
digest-db = "digest.db.entrypoint:main"
digest = "digest.entrypoint:main"

[tool.ruff]
select = ["F", "E", "W", "R", "C", "B", "I", "N", "UP", "SIM", "RUF", "D"]
exclude = ["src/digest/db/models.py", "src/digest/db/alembic"]